SERVER-25385 Eliminate checks of this against nullptr

The compiler is free to eliminate them anyway, as it would have required
UB to reach the check.