src/mongo/client/dbclientcursor.h
@@ -70,7 +70,6 @@ public:
         then perhaps stop.
     */
     int objsLeftInBatch() const {
-        _assertIfNull();
         return _putBack.size() + batch.nReturned - batch.pos;
     }
     bool moreInCurrentBatch() {
@@ -148,7 +147,6 @@ public:
         ResultFlag_ErrSet is the possible exception to that
     */
     bool hasResultFlag(int flag) {
-        _assertIfNull();
         return (resultFlags & flag) != 0;
     }
 
@@ -284,11 +282,6 @@ private:
     void commandDataReceived();
 
     void requestMore();
-
-    // Don't call from a virtual function
-    void _assertIfNull() const {
-        uassert(13348, "connection died", this);
-    }
 
     // init pieces
     void _assembleInit(Message& toSend);
